# ddgs-mcp

./: .mcp.json  README.md  ddgs-mcp.service  pyproject.toml
.github/workflows/: release.yml
docs/: ddgs-readme.md  fastmcp.md
src/ddgs_mcp/: __init__.py  main.py
