[project]
name = "ddgs-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "schwarz", email = "root.schwarz.chan@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
ddgs-mcp = "ddgs_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
