[project]
name = "ddgs-mcp"
version = "0.1.0"
description = "MCP server of DDGS"
readme = "README.md"
authors = [
    { name = "schwarz", email = "root.schwarz.chan@gmail.com" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "ddgs>=9.6.1",
    "fastmcp>=2.13.0.2",
    "pydantic>=2.12.3",
    "typer>=0.20.0",
]

[project.scripts]
ddgs-mcp = "ddgs_mcp.main:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
major_version_zero = true
